--- a/main/templates/main/exam.html
+++ b/main/templates/main/exam.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block content %}
-<div class="container mt-3 mb-3">
+<div class="container mt-3 mb-3" style="text-align: center">
     <h1>Practice and Exam</h1>
+</div>
     <div class="container mt-4 mb-4">
         <div class="container mt-3">
             <br>
@@ -57,5 +58,5 @@
           </div>
     </div>
       
-</div>
+
 {% endblock %}
