--- a/main/templates/main/explore.html
+++ b/main/templates/main/explore.html
@@ -3,8 +3,10 @@
 
 
 {% block content %}
-<div class="container mt-3 section2">
+<div class="container mt-3 mb-3 section2" style="text-align: center">
     <h1 style="color:  #00378a;">Explore Our Courses</h1>
+</div>
+<div class="container">
     <p class="article-content">
       Our teams brings you <b>"THE FIRST EVER ON THE INTERNET"</b> coding tutorials in your own native language, <b>ODIA.</b>
     </p>
@@ -13,7 +15,7 @@
     </p>
     <p class="article-content">So <b>GET READY</b> to fly high in your career by learning from our tutorials. Browse through the below videos and <b>Get Started</b>.</p> 
     </div>
-    
+  </div>   
 <div class="container mt-4 section2">
     <h1 style="color:  #00378a;">Current Available And Ongoing Courses</h1>
     <h3 class="mt-5">Python Tutorials (In Odia)</h3>
