--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -37,7 +37,7 @@
         <h1 style="margin-bottom: 2%; color:black">Our Offerings</h1>
     </div>
 <div class="card-deck">
-    <div class="card">
+    <div class="card card1">
       <img class="card-img-top" src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" alt="Card image cap">
       <div class="card-body">
         <div style="text-align: center;">
@@ -47,7 +47,7 @@
         <div style="text-align: center;"><a href="{% url 'explore' %}"><p style="font-family: cursive;">Tutorials</p></a></div>
       </div>
     </div>
-    <div class="card">
+    <div class="card card2">
       <img class="card-img-top" src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" alt="Card image cap">
       <div class="card-body">
         <div style="text-align: center;">
@@ -57,7 +57,7 @@
         <div style="text-align: center;"><a href="{% url 'resources' %}"><p style="font-family: cursive;">Notes and Resources</p></a></div>
       </div>
     </div>
-    <div class="card">
+    <div class="card card3">
       <img class="card-img-top" src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" alt="Card image cap">
       <div class="card-body">
         <div style="text-align: center;">
