--- a/main/templates/main/privacy.html
+++ b/main/templates/main/privacy.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container mt-5 mb-5">
+<div class="container mt-5 mb-5" style="text-align: center">
     <div class="article-subhead" style="text-align: center;">
         Privacy Policy
     </div>
