--- a/main/templates/main/articles.html
+++ b/main/templates/main/articles.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container mt-3 section2">
+<div class="container mt-3 section2" style="text-align: center">
     <h1 style="color:  #00378a;">Articles</h1>
 </div>
 <div class="container mt-4 mb-4">
