--- a/main/templates/main/resources.html
+++ b/main/templates/main/resources.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<div class="container mt-3 section2">
+<div class="container mt-3 section2" style="text-align: center">
     <h1 style="color:  #00378a;">Resources</h1>
 </div>
 <div class="container mt-3 mb-2">
