small cahnge made

--- a/main/templates/main/Articles/C++/1002.html
+++ b/main/templates/main/Articles/C++/1002.html
@@ -7,7 +7,7 @@
         <h3>Advantages and Disadvantages Of C++ Programming</h3>
  </div>
  <div class="article-content" style="text-align: center;">
- Article by <b><a href="">Smita Jha</a></b></div>
+ Article by <b><a href="https://www.linkedin.com/in/smita-jha-54b99a1b7/">Smita Jha</a></b></div>
  <br>
 
 <br>
