--- a/main/templates/main/Articles/C++/1003.html
+++ b/main/templates/main/Articles/C++/1003.html
@@ -7,7 +7,7 @@
         <h3>Roadmap of becoming C++ developer</h3>
     </div>
     <div class="article-content" style="text-align: center;">
-        Article by <b><a href="">Smita Jha</a></b>
+        Article by <b><a href="https://www.linkedin.com/in/smita-jha-54b99a1b7/">Smita Jha</a></b>
         <br>
     </div>
     <br>
