--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -254,22 +254,28 @@
       <div class="row">
             <div class="col-lg-6 col-md-6 mb-lg-0 mb-5">
             <div class="avatar mx-auto">
-                <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle z-depth-1"
+                <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602048957/Team%20Photo/brushankl_yhltri.jpg" class="rounded-circle z-depth-1"
                 alt="Sample avatar" style="height: 35%; width: 35%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Brushank Patra</h5>
             <p class="text-uppercase blue-text mb-0"><strong>Graphic Designer</strong></p>
             <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ITER, Bhubaneswar</p>
             <ul class="list-unstyled mb-0">
-                <a class="p-2 fa-lg fb-ic">
-                <i class="fab fa-facebook-f fb blue-text"> </i>
-                </a>
-                <a class="p-2 fa-lg tw-ic">
-                <i class="fab fa-twitter tt blue-text"> </i>
-                </a>
-                <a class="p-2 fa-lg ins-ic">
-                <i class="fab fa-instagram insta blue-text"> </i>
-                </a>
+                <a class="p-2 fa-lg fb-ic" href="https://www.facebook.com/iambrushank" style="color: black; text-decoration: none;">
+                    <i class="fab fa-facebook-f fb blue-text"> </i>
+                  </a>
+                  <a class="p-2 fa-lg tw-ic" href="https://twitter.com/iambrushank" style="color: black; text-decoration: none;">
+                    <i class="fab fa-twitter tt blue-text"> </i>
+                  </a>
+                  <a class="p-2 fa-lg ins-ic" href="https://www.instagram.com/iambrushank/" style="color: black; text-decoration: none;">
+                    <i class="fab fa-instagram insta blue-text"> </i>
+                  </a>
+                  <a class="p-2 fa-lg ins-ic" href="https://www.linkedin.com/in/brushank-patra-a440381b2/" style="color: black; text-decoration: none;">
+                    <i class="fab fa-linkedin linkedin blue-text"> </i>
+                  </a>
+                  <a class="p-2 fa-lg ins-ic" href="https://github.com/BrushankPatra" style="color: black; text-decoration: none;">
+                    <i class="fab fa-github blue-text"> </i>
+                  </a>
             </ul>
             </div>
             <div class="col-lg-6 col-md-6 mb-lg-0 mb-5">
