--- a/main/templates/main/exam.html
+++ b/main/templates/main/exam.html
@@ -34,8 +34,8 @@
               </div>
               <div id="menu1" class="container tab-pane fade"><br>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item article-content">Python Theory MCQ 1 <a href="https://www.tryinteract.com/share/quiz/5f7ace0bb401c4001446fd2b" style="float: right;">Test Yourself</a></li>
-                    <li class="list-group-item article-content">Python Theory MCQ 2</li>
+                    <li class="list-group-item article-content"><div class='goconqr-popup-embed' data-id='26367928' data-type='quizzes'></div><script type='text/javascript' src='https://cdn.goconqr.com/embed.min.js'></script></li>
+                    <li class="list-group-item article-content">Python Theory MCQ 2<a href="https://www.tryinteract.com/share/quiz/5f7ace0bb401c4001446fd2b" style="float: right;">Test Yourself</a></li>
                     <li class="list-group-item article-content">Python Output MCQ</li>
                     <li class="list-group-item article-content">Python Error Finding MCQ</li>
                 </ul>
