--- a/main/templates/main/resources.html
+++ b/main/templates/main/resources.html
@@ -24,7 +24,7 @@
           </li>
         </ul>
         <div class="tab-content">
-          <div id="home" class="container tab-pane active mt-4 mb-4"><br>
+          <div id="home" class="container tab-pane active mb-4"><br>
             <h3 class="mb-3">Welcome to the Resources Section</h3>
             <div style="text-align: center;">
               <p style="font-size: large;"><i>"Education is the passport to the future, for tomorrow belongs to those who prepare for it today." – <b>Malcolm X</b></i></p>
